
<package>
  <name>robot_process_msgs</name>
  <version>0.1.0</version>
  <description>
    This package contains messages used by robot_process, such as node's state
    and error
  </description>
  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/shape_msgs</url>
  <author>Maciej Zurad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
