<package format="2">
  <name>robot_process_msgs</name>
  <version>0.1.0</version>
  <description>
    This package contains messages used by robot_process, such as node's state
    and error
  </description>

  <author email="maciej.zurad@gmail.com">Maciej ZURAD</author>
  <maintainer email="maciej.zurad@gmail.com">Maciej ZURAD</maintainer>

  <license>BSD</license>

  <url>http://www.ros.org/wiki/robot_process_msgs</url>
  <url type="bugtracker">https://github.com/snt-robotics/robot_process/issues</url>
  <url type="repository">https://github.com/snt-robotics/robot_process</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
