<?xml version="1.0"?>
<package>
  <name>robot_process_tutorials</name>
  <version>0.1.0</version>
  <description>The robot_process_tutorials package</description>

  <author email="maciej.zurad@gmail.com">Maciej ZURAD</author>
  <maintainer email="maciej.zurad@gmail.com">Maciej ZURAD</maintainer>

  <license>BSD</license>

  <url>http://www.ros.org/wiki/robot_process_tutorials</url>
  <url type="bugtracker">https://github.com/snt-robotics/robot_process/issues</url>
  <url type="repository">https://github.com/snt-robotics/robot_process</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_process</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>robot_process</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>

</package>
