<package format="2">
  <name>robot_process_tutorials</name>
  <version>0.1.0</version>
  <description>The robot_process_tutorials package</description>

  <author email="maciej.zurad@gmail.com">Maciej ZURAD</author>
  <maintainer email="maciej.zurad@gmail.com">Maciej ZURAD</maintainer>

  <license>BSD</license>

  <url>http://www.ros.org/wiki/robot_process_tutorials</url>
  <url type="bugtracker">https://github.com/snt-robotics/robot_process/issues</url>
  <url type="repository">https://github.com/snt-robotics/robot_process</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>robot_process</depend>

  <export>
  </export>

</package>
